--- a/app/src/main/res/layout/activity_proses.xml
+++ b/app/src/main/res/layout/activity_proses.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="125dp"
         android:orientation="horizontal"
-        android:weightSum="8"
+        android:weightSum="9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -48,9 +48,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:gravity="end"
-            android:text="/Hari"
+            android:text="/Minggu"
             android:textColor="@color/white" />
     </LinearLayout>
 
@@ -123,6 +123,33 @@
                     android:maxLength="16" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                app:boxStrokeColor="@color/text_input_layout_stroke_color">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:maxLength="16" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                app:boxStrokeColor="@color/text_input_layout_stroke_color">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:maxLength="16" />
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
     </LinearLayout>
@@ -138,7 +165,7 @@
         android:textAllCaps="false"
         android:textColor="@color/light_blue"
         app:cornerRadius="8dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="38dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
