--- a/app/src/main/res/layout/activity_pengukuran.xml
+++ b/app/src/main/res/layout/activity_pengukuran.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     android:background="@color/light_blue"
     tools:context=".PengukuranActivity">
+
+    <ProgressBar
+        android:id="@+id/loading"
+        android:visibility="gone"
+        style="@android:style/Widget.Material.Light.ProgressBar.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
@@ -13,21 +26,22 @@
         android:layout_marginTop="75dp"
         android:gravity="center"
         android:textColor="@color/white"
-        android:text="PENGUKURAN BERHASIL"
+        android:text="MOHON TUNGGU"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:text="Tinggi Badan :"
         android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@id/ti_tb"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Tinggi Badan :"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ti_tb"
@@ -46,6 +60,7 @@
             android:id="@+id/et_tb"
             android:textColor="@color/white"
             android:inputType="number"
+            android:enabled="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
@@ -78,6 +93,7 @@
             android:id="@+id/et_bb"
             android:inputType="number"
             android:layout_width="match_parent"
+            android:enabled="false"
             android:textColor="@color/white"
             android:layout_height="wrap_content"
             />
