--- a/app/src/main/res/layout/activity_registrasi.xml
+++ b/app/src/main/res/layout/activity_registrasi.xml
@@ -171,6 +171,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_tgl_lahir"
+                    android:enabled="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
@@ -195,12 +196,14 @@
                 android:textSize="18sp" />
 
             <RadioGroup
+                android:id="@+id/rg_jk"
                 android:layout_width="0dp"
                 android:layout_weight="4"
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:layout_height="wrap_content">
                 <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/rb_lk"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:buttonTint="@color/white"
@@ -209,6 +212,7 @@
                     android:text="Laki-Laki"/>
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/rb_pr"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:buttonTint="@color/white"
