--- a/app/src/main/res/layout/activity_proses.xml
+++ b/app/src/main/res/layout/activity_proses.xml
@@ -50,7 +50,7 @@
             android:layout_gravity="center"
             android:layout_weight="2"
             android:gravity="end"
-            android:text="/Minggu"
+            android:text="/Hari"
             android:textColor="@color/white" />
     </LinearLayout>
 
@@ -137,19 +137,6 @@
                     android:maxLength="16" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                app:boxStrokeColor="@color/text_input_layout_stroke_color">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:maxLength="16" />
-            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
     </LinearLayout>
