--- a/app/src/main/res/layout/activity_registrasi.xml
+++ b/app/src/main/res/layout/activity_registrasi.xml
@@ -73,6 +73,8 @@
                     android:id="@+id/et_nik"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
                     android:inputType="number"
                     android:maxLength="16" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -107,6 +109,8 @@
                     android:id="@+id/et_nama"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
@@ -139,6 +143,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_tmp_lahir"
                     android:layout_width="match_parent"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -171,10 +177,15 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_tgl_lahir"
-                    android:enabled="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text" />
+                    android:inputType="none|textNoSuggestions"
+                    android:cursorVisible="false"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
@@ -192,6 +203,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:text="Jenis Kelamin :"
+                android:layout_gravity="center"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
