--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -180,7 +180,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:textSize="14sp"
-                android:text="Tinggi Badan"/>
+                android:text="Panjang Badan"/>
             <TextView
                 android:id="@+id/tv_tb"
                 android:layout_width="0dp"
